Fix expert tooltip colour becoming unreadable with colour change

--- a/resources/assets/less/bem/tooltip-beatmap.less
+++ b/resources/assets/less/bem/tooltip-beatmap.less
@@ -57,7 +57,7 @@
     }
 
     &--expert-plus {
-      color: @diff-expert-plus;
+      color: #999;
     }
 
     &--title {
